--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webdriverio": "4.7.1"
   },
   "devDependencies": {
+    "allure-commandline": "^2.4.1",  
     "babel-jest": "~21.2.0",
     "babel-polyfill": "~6.26.0",
     "eslint": "~4.10.0",
